--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>unicrore-animate-trade</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>unicrore</title>
+    <meta name="description" content="Product by ZVPL" />
+    <meta name="author" content="ZVPL" />
+    <meta property="og:image" content="/logo (white).png" />
+    
+    <!-- Use the existing PNG as favicon -->
+    <link rel="icon" type="image/png" href="/logo (white).png">
   </head>
 
   <body>
