--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>unicrore</title>
+    <title>Unicrore</title>
     <meta name="description" content="Product by ZVPL" />
     <meta name="author" content="ZVPL" />
     <meta property="og:image" content="/logo (white).png" />
     
-    <!-- Use the existing PNG as favicon -->
-    <link rel="icon" type="image/png" href="/logo (white).png">
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="192x192" href="/public/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/public/android-chrome-512x512.png">
   </head>
 
   <body>
